--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.listCountries {
+  display: flex;
+  text-align: left;
+}
+img {
+  width: 45px;
 }
